add icon for translate and its item on menu_gallery.xml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'com.github.nostra13:Android-Universal-Image-Loader:v1.9.5'
     compile 'com.github.ctodobom:FabToolbar:3c5f0e0ff1b6d5089e20b7da7157a604075ae943'
     compile 'org.piwik.sdk:piwik-sdk:0.0.4'
+    compile 'com.google.android.gms:play-services-vision:16.2.0'
 }
