--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.todobom.opennotescanner">
 
-    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="27"/>
+    <uses-sdk
+        android:minSdkVersion="21"
+        android:targetSdkVersion="27" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -16,6 +18,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:name=".OpenNoteScannerApplication"
@@ -66,8 +69,13 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
+
+        <activity
+            android:name=".OCRActivity"
+            android:label="@string/title_activity_ocr"></activity>
+        <meta-data android:name="com.google.android.gms.vision.DEPENDENCIES" android:value="orc"></meta-data>
     </application>
 
 </manifest>
