--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.todobom.opennotescanner">
 
-    <uses-sdk
-        android:targetSdkVersion="27" />
+    <uses-sdk android:targetSdkVersion="27" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -18,6 +17,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".OpenNoteScannerApplication"
@@ -61,6 +61,7 @@
             android:name=".SettingsActivity"
             android:label="@string/settings"
             android:theme="@style/AppTheme" />
+
         <provider
             android:name=".GenericFileProvider"
             android:authorities="${applicationId}.genericfileprovider"
@@ -73,8 +74,13 @@
 
         <activity
             android:name=".OCRActivity"
-            android:label="@string/title_activity_ocr"></activity>
-        <meta-data android:name="com.google.android.gms.vision.DEPENDENCIES" android:value="orc"></meta-data>
+            android:label="@string/title_activity_ocr" />
+
+        <meta-data
+            android:name="com.google.android.gms.vision.DEPENDENCIES"
+            android:value="orc" />
+
+        <activity android:name=".TranslationActivity"></activity>
     </application>
 
 </manifest>
